<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="me.vzool.quizapp.Question4Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true"
            android:text="@string/which_color_is_evil"
            style="@style/AppQuestionTextViewStyle" />

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="@dimen/question_image_layout_width"
            android:layout_height="@dimen/question_image_layout_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/color_humans"
            android:contentDescription="@null"/>

        <RadioGroup
            android:id="@+id/color_humans_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp">

            <RadioButton
                android:id="@+id/color_humans_one_of_them"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_of_them"/>

            <RadioButton
                android:id="@+id/color_humans_no_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_one"/>
        </RadioGroup>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:onClick="moveToNextQuestion"
            android:layout_below="@+id/color_humans_radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp" />

    </RelativeLayout>

</ScrollView>