<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="me.vzool.quizapp.Question5Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true"
            android:text="@string/the_really_peace_is_a_matter_of"
            style="@style/AppQuestionTextViewStyle" />

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="@dimen/question_image_layout_width"
            android:layout_height="@dimen/question_image_layout_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            android:textAlignment="center"
            app:srcCompat="@drawable/peace_dove"
            android:contentDescription="@null"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:id="@+id/peace_decision_radioGroup">

            <RadioButton
                android:id="@+id/two_side_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_side"/>

            <RadioButton
                android:id="@+id/one_side_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_side" />

        </RadioGroup>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:onClick="ShowTheResult"
            android:layout_below="@+id/peace_decision_radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp" />

    </RelativeLayout>

</ScrollView>