<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="me.vzool.quizapp.Question3Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true"
            android:text="@string/is_pink_a_color"
            style="@style/AppQuestionTextViewStyle" />

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="@dimen/question_image_layout_width"
            android:layout_height="@dimen/question_image_layout_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/anonymous_pink_t_shirt"
            android:contentDescription="@null"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:id="@+id/person_name_editText"
            android:inputType="text"
            android:hint="@string/yes_or_no"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:onClick="moveToNextQuestion"
            android:layout_below="@+id/person_name_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp" />

    </RelativeLayout>

</ScrollView>